--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -5,26 +5,35 @@ import Main from "../../components/Main.astro";
 import Layout from "../../layouts/Layout.astro";
 import type { CollectionEntry } from "astro:content";
 import { Image } from "astro:assets";
+import { getEntryBySlug } from "astro:content";
+// export const prerender = true;
 
-export const getStaticPaths = async () => {
-    const posts = await getCollection("posts");
-    const paths = posts.map(post=>{
-        return{
-            params: {
-                slug: post.slug
-            },
-            props: {
-                post
-            }
-        }
-    })
-    return paths;
-}
-type Props = {
-    post: CollectionEntry<"posts">
-}
+// export const getStaticPaths = async () => {
+//     const posts = await getCollection("posts");
+//     const paths = posts.map(post=>{
+//         return{
+//             params: {
+//                 slug: post.slug
+//             },
+//             props: {
+//                 post
+//             }
+//         }
+//     })
+//     return paths;
+// }
 
-const {post} = Astro.props;
+// type Props = {
+//     post: CollectionEntry<"posts">
+// }
+
+// const {post} = Astro.props;
+
+const {slug} = Astro.params;
+const post = await getEntryBySlug("posts", slug as string)
+if(!post){
+    return Astro.redirect('/404')
+}
 const {Content} = await post.render();
 ---
 
