--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import H1 from "../components/H1.astro";
 ---
 
 <Layout title="Blog">
-	<Main>
-		<H1 text="CrashCourse Blogs"/>
-	</Main>
+    <Main>
+        <H1 text="CrashCourse About"/>
+    </Main>
 </Layout>
